# ENavigate

./: .gitignore  CMakeLists.txt
include/agv/: log_msg.h  models.h  shm.h
include/config/: config.h
lib/: CMakeLists.txt
lib/ipc/: mq_wrapper.h  secure_exit.h  signal_handler.h
lib/logger/: CMakeLists.txt  logger.cpp
master/: README.md  mqtt-api.md  system-api.md
master/include/agv/: mq_msg.h
master/include/config/: config.h
master/lib/ipc/: graceful_exit.h  mq_wrapper.h  secure_exit.h  seqlock.h  shm_layout.h  shm_manager.h
master/lib/logger/: logger.cpp
master/lib/mqtt/: mqtt_client.h
master/lib/timer/: timer_fd.h
master/scripts/: secure-exit.md  start_api.sh
master/scripts/systemd/: log.service
master/src/: CMakeLists.txt
master/src/http_service/: .Topo.cpp.swp  CMakeLists.txt  Status.cpp  Task.cpp  Topo.cpp  fcgi_utils.h
master/src/log_daemon/: CMakeLists.txt
master/src/model_manager/: model_manager.cpp
master/src/mqtt_service/: CMakeLists.txt  mqtt_publisher.cpp  mqtt_subscriber.cpp
master/src/planner/: planner.cpp  planner.h
master/src/router/: router.cpp  router.h
master/tests/: CMakeLists.txt  test_1_http.cpp  test_mq_mqtt.cpp  test_shm.cpp  test_shm_read_print.cpp  test_tmp.cpp
peripheral/include/: CarMqttClient.h  drive.h  encoder.h  key.h  mqtt_handler.h
peripheral/src/: CarMqttClient.cpp  drive.cpp  encoder.cpp  key.cpp  main.cpp  mqtt_handler.cpp
scripts/: inject_log  inject_log.cpp  secure-exit.md
scripts/systemd/: agv-log-daemon.service
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_logger.cpp
tests/mq/: test_mq1.cpp  test_mq2.cpp
web/: agv_api.md  html-api.md  index.html  删除配置方法.md
