add_executable(Status Status.cpp)
target_link_libraries(Status PRIVATE -lfcgi -lrt -lpthread agv_ipc systemd rt)
add_executable(Topo Topo.cpp)
target_link_libraries(Topo PRIVATE -lfcgi -lrt -lpthread agv_ipc systemd rt)
add_executable(Task Task.cpp)
target_link_libraries(Task PRIVATE -lfcgi -lrt -lpthread agv_ipc systemd rt)
